{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 506,
  "lineage": "b9955225-cda8-b679-c44e-fb1bb00527ae",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.152.0.1",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/subnetworks/burkey-network",
            "ip_cidr_range": "10.152.0.0/20",
            "name": "burkey-network",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "private_ip_google_access": false,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/subnetworks/burkey-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.87.245.187",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-21T18:41:39.341-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/nomad",
            "name": "nomad",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/nomad",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/nomad-ui-forwarding-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "server01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.119.107",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-21T18:41:39.344-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/server01",
            "name": "server01",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/server01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/zones/australia-southeast1-b/instances/bastion"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.201.5.9",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-21T21:18:49.562-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/traefik",
            "name": "traefik",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/addresses/traefik"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-lb-nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "8081",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T18:42:12.606-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/lb-nomad",
            "log_config": [],
            "name": "lb-nomad",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "priority": 1000,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/lb-nomad",
            "source_ranges": [
              "120.148.55.102/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4646",
                  "4647",
                  "4848"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "4647"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "8080",
                  "8081"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8500",
                  "8620",
                  "21000-21225",
                  "8300-8302"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8600",
                  "8300-8302"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-21T18:42:12.564-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/firewall-nomad",
            "log_config": [],
            "name": "firewall-nomad",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "priority": 1000,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/firewall-nomad",
            "source_ranges": [
              "120.148.55.102/32",
              "34.151.118.216/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T18:42:12.563-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/firewall-ssh",
            "log_config": [],
            "name": "firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "priority": 1000,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/firewall-ssh",
            "source_ranges": [
              "120.148.55.102/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "4646",
                  "4647",
                  "4648"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "4647"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "8500",
                  "8600",
                  "8080",
                  "8081",
                  "21000-21225",
                  "8300-8302"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8600",
                  "8300-8302"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-21T18:42:12.541-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/internal-all",
            "log_config": [],
            "name": "internal-all",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "priority": 1000,
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/firewalls/internal-all",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/backend-service",
            "creation_timestamp": "2022-06-21T18:43:15.831-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/nomad-ui-forwarding-rule",
            "ip_address": "34.87.245.187",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nomad-ui-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "4646",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/nomad-ui-forwarding-rule"
          },
          "dependencies": [
            "data.google_compute_subnetwork.nomad",
            "google_compute_address.nomad",
            "google_compute_instance_template.nomad_server",
            "google_compute_region_instance_group_manager.nomad_server",
            "data.hcp_packer_image.nomad",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_network.network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.nomadui",
            "google_service_account.nomad_node",
            "random_string.nomad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/bastion-service",
            "creation_timestamp": "2022-06-21T18:43:14.534-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/ssh",
            "ip_address": "34.151.116.29",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ssh",
            "network_tier": "PREMIUM",
            "port_range": "22",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/ssh"
          },
          "dependencies": [
            "google_compute_region_health_check.bastion",
            "random_string.nomad",
            "data.hcp_packer_image.nomad",
            "google_compute_network.network",
            "google_compute_disk.nomad",
            "google_compute_instance.server01",
            "google_compute_instance_group.bastion",
            "google_compute_region_backend_service.bastion_backend",
            "google_service_account.nomad_node",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_address.server01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/nomad-client-service",
            "creation_timestamp": "2022-06-21T21:21:12.554-07:00",
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/traefik",
            "ip_address": "35.201.5.9",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "traefik",
            "network_tier": "PREMIUM",
            "port_range": "8080",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/forwardingRules/traefik"
          },
          "dependencies": [
            "google_compute_address.traefik",
            "google_compute_region_backend_service.nomad_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/images/packer-1655360317",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/zones/australia-southeast1-b/disks/node-disk"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/zones/australia-southeast1-b/instances/bastion",
            "instance_id": "513216215269756314",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC8xYZMmdFegfk4NCog1casM50GMQOzunGt1gjO0TNLPI4aJvfwL3BDyEMmvzvkyLKlAxhuQ9nPjYW5X6BK1kihHIBgpz3lweaXJWE0ITJEGjLpniSBvvXsQQA/Dq7wIc/l383aEaiqYDzmUhcndBkCPcHPd7WyGTQJl76Oh+ot0gabQzy/qfXdZNCnAIyCrVV9ZVlZmvEVcPLWq2wtP3y/9m027GVTh01KxaZjVHvT5gvjsniN3ZI908HsSTTwHXykXQQCTIOTfKPVvpr3lSiFomzGKVLQU8bkRz86ICn5UlXUNlzgNQbRA/JBM2W+o8XbzYhyoL+srQ7upPuWkcRrYYNnCk6Ag9fnUXTFAjOJdKZdhrxF2AuM/uEp+M0JwSwsCgilnm5nztZfRf9QHgKuYAvelu4325TtazIPXUiwXAsIKCl0U [...]
            },
            "metadata_fingerprint": "m4XULSPP2cc=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.119.107",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
                "network_ip": "10.152.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/subnetworks/burkey-network",
                "subnetwork_project": "hc-e0c4d4af504d4dd097fa45c3cfd"
              }
            ],
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/zones/australia-southeast1-b/instances/bastion",
            "service_account": [
              {
                "email": "pxjpnryvaqvbzxgn@hc-e0c4d4af504d4dd097fa45c3cfd.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "australia-southeast1-b"
          },
          "dependencies": [
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_address.server01",
            "google_compute_disk.nomad",
            "google_compute_network.network",
            "google_service_account.nomad_node",
            "random_string.nomad",
            "data.hcp_packer_image.nomad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "Network for Nomad",
            "enable_ula_internal_ipv6": false,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "mtu": 1500,
            "name": "burkey-network",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "bastion_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "description": "bastion-server",
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/zones/australia-southeast1-b/instanceGroups/bastion-compute-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-06-21T18:42:51.308-07:00",
            "enable_cdn": false,
            "fingerprint": "d9fg1HYnZpM=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/healthChecks/basion-tcp-check-clients"
            ],
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/bastion-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bastion-service",
            "port_name": "http",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "protocol": "TCP",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/bastion-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_instance_group.bastion",
            "data.hcp_packer_image.nomad",
            "google_compute_disk.nomad",
            "google_compute_instance.server01",
            "google_compute_region_health_check.bastion",
            "google_service_account.nomad_node",
            "random_string.nomad",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_address.server01",
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "description": "nomad-servers",
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/instanceGroups/nomad-server",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-06-21T18:42:51.154-07:00",
            "enable_cdn": false,
            "fingerprint": "lOR7qJv0EWk=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/healthChecks/nomad-tcp-check"
            ],
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "protocol": "TCP",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_service_account.nomad_node",
            "random_string.nomad",
            "data.google_compute_subnetwork.nomad",
            "data.hcp_packer_image.nomad",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_region_health_check.nomadui",
            "google_compute_region_instance_group_manager.nomad_server",
            "google_compute_instance_template.nomad_server",
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "nomad_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "description": "nomad-client service",
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/instanceGroups/nomad-client",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-06-21T18:43:01.271-07:00",
            "enable_cdn": false,
            "fingerprint": "ctNCm4l3Ptg=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/healthChecks/nomad-tcp-check"
            ],
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/nomad-client-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nomad-client-service",
            "port_name": "http",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "protocol": "TCP",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/nomad-client-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_subnetwork.nomad",
            "data.hcp_packer_image.nomad",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_instance_template.nomad_client",
            "google_compute_region_health_check.nomadui",
            "google_compute_region_instance_group_manager.nomad_client",
            "random_string.nomad",
            "google_compute_network.network",
            "google_service_account.nomad_node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "description": "traefik",
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/instanceGroups/nomad-client",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-06-21T21:20:01.964-07:00",
            "enable_cdn": false,
            "fingerprint": "4mnygH5ODuQ=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/healthChecks/traefik-check"
            ],
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/traefix-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "traefix-service",
            "port_name": "http",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "protocol": "TCP",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/backendServices/traefix-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_subnetwork.nomad",
            "data.hcp_packer_iteration.hcp_nomad_packer",
            "google_compute_network.network",
            "google_compute_region_instance_group_manager.nomad_client",
            "random_string.nomad",
            "data.hcp_packer_image.nomad",
            "google_compute_instance_template.nomad_client",
            "google_compute_region_health_check.traefik",
            "google_service_account.nomad_node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-06-21T18:42:13.079-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/routers/burkey-router",
            "name": "burkey-router",
            "network": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/global/networks/burkey-network",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hc-e0c4d4af504d4dd097fa45c3cfd/regions/australia-southeast1/routers/burkey-router"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "hc-e0c4d4af504d4dd097fa45c3cfd/australia-southeast1/burkey-router/burkey-nat-router",
            "min_ports_per_vm": 0,
            "name": "burkey-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "hc-e0c4d4af504d4dd097fa45c3cfd",
            "router": "burkey-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.router"
          ]
        }
      ]
    }
  ]
}